[package]
name = "wgpu-03-pipeline"
version = "0.1.0"
authors = ["Carlos Neto <https://github.com/carlosvneto>"]
edition = "2021"

[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"

[[bin]]
name = "wgpu-03-pipeline"
path = "src/main.rs"

[[bin]]
name = "wgpu-03-pipeline-challenge"
path = "src/challenge.rs"